fixed spacing problems

--- a/src/style.less
+++ b/src/style.less
@@ -6,6 +6,10 @@
 	html > body{
 		margin: 1em;
 	}
+
+	html > body > .layout{
+		margin-bottom: 2em;
+	}
 }
 
 body{
@@ -58,6 +62,7 @@ p{
 
 .layout{
 	.mw-ui-one-whole;
+	margin-bottom: 4em;
 }
 
 #clear{
